@@ -29,4 +29,14 @@ enum _XmlNodeTypes
 	XML_NODE_TYPES_MAX
 } XmlNodeTypes;
 
+void			xmlnode_set_name( XmlNode, const char * );
+const char *	xmlnode_get_name( XmlNode );
+void			xmlnode_set_type( XmlNode, XmlNodeTypes );
+XmlNodeTypes	xmlnode_get_type( XmlNode );
+void			xmlnode_set_value( XmlNode, const char * );
+const char *	xmlnode_get_value( XmlNode );
+void			xmlnode_add_child( XmlNode, XmlNode child );
+void			xmlnode_set_children( XmlNode, List children );
+List			xmlnode_get_children( XmlNode );
+
 #endif  /* XMLNODE_H */
